force-app/main/default/objects/Product2/fields/centro_suministrador__c.field-meta.xml
<CustomField>
    <fullName>centro_suministrador__c</fullName>
    <label>Centro Suministrador</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Centro_suministrador</valueSetName>
    </valueSet>
</CustomField>