force-app/main/default/objects/Product2/fields/codigo_ean__c.field-meta.xml
<CustomField>
    <fullName>codigo_ean__c</fullName>
    <label>Código ean</label>
    <length>50</length>
    <type>Text</type>
</CustomField>