force-app/main/default/objects/Product2/fields/Fecha_Fin_de_Vigencia__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Fin_de_Vigencia__c</fullName>
    <label>Fecha Fin de Vigencia</label>
    <type>Date</type>
</CustomField>