force-app/main/default/objects/Product2/fields/Fecha_Inicial_de_Vigencia__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Inicial_de_Vigencia__c</fullName>
    <label>Fecha Inicial de Vigencia</label>
    <type>Date</type>
</CustomField>