force-app/main/default/objects/Product2/fields/Grupo_de_art_culos__c.field-meta.xml
<CustomField>
    <fullName>Grupo_de_art_culos__c</fullName>
    <label>Grupo de artículos</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ESPA</fullName>
                <label>Espacios</label>
            </value>
            <value>
                <fullName>GUARQM</fullName>
                <label>Guardquim</label>
            </value>
            <value>
                <fullName>IMPERC</fullName>
                <label>Impercryl</label>
            </value>
            <value>
                <fullName>NAYA</fullName>
                <label>Naya</label>
            </value>
            <value>
                <fullName>QUIMCR</fullName>
                <label>Quimicret</label>
            </value>
            <value>
                <fullName>SELLAQ</fullName>
                <label>Sellaquim</label>
            </value>
            <value>
                <fullName>SOPORT</fullName>
                <label>Soporte</label>
            </value>
            <value>
                <fullName>DOCFIN</fullName>
                <label>Documento Financiero</label>
            </value>
            <value>
                <fullName>ACCESO</fullName>
                <label>Accesorio</label>
            </value>
            <value>
                <fullName>IQ</fullName>
                <label>Imperquimia</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>