force-app/main/default/objects/Product2/fields/Grupo_de_Materiales__c.field-meta.xml
<CustomField>
    <fullName>Grupo_de_Materiales__c</fullName>
    <label>Grupo de Materiales</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Grupo_de_materiales</valueSetName>
    </valueSet>
</CustomField>