force-app/main/default/objects/Product2/fields/IMP_IdExterno__c.field-meta.xml
<CustomField>
    <fullName>IMP_IdExterno__c</fullName>
    <description>Almacena el número de producto de SAP</description>
    <externalId>true</externalId>
    <label>Id Externo</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>