force-app/main/default/objects/Product2/fields/Indicadorborrado__c.field-meta.xml
<CustomField>
    <fullName>Indicadorborrado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indicador de borrado</label>
    <type>Checkbox</type>
</CustomField>