force-app/main/default/objects/Product2/fields/Lista_precios__c.field-meta.xml
<CustomField>
    <fullName>Lista_precios__c</fullName>
    <label>Tipo de lista de precios</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Lista_de_precios_SAP</valueSetName>
    </valueSet>
</CustomField>