force-app/main/default/objects/Product2/fields/presentacion_producto__c.field-meta.xml
<CustomField>
    <fullName>presentacion_producto__c</fullName>
    <label>Presentación del producto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>KIT</fullName>
                <label>Kit</label>
            </value>
            <value>
                <fullName>KG</fullName>
                <label>Kilogramo</label>
            </value>
            <value>
                <fullName>L</fullName>
                <label>Litro</label>
            </value>
            <value>
                <fullName>M</fullName>
                <label>Metro</label>
            </value>
            <value>
                <fullName>M2</fullName>
                <label>Metro Cuadrado</label>
            </value>
            <value>
                <fullName>PI</fullName>
                <label>Pieza</label>
            </value>
            <value>
                <fullName>SER</fullName>
                <label>Servicio</label>
            </value>
            <value>
                <fullName>UN</fullName>
                <label>Unidad</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>