force-app/main/default/objects/Product2/fields/sku__c.field-meta.xml
<CustomField>
    <fullName>sku__c</fullName>
    <label>SKU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>