force-app/main/default/objects/Product2/fields/tipo_impuesto__c.field-meta.xml
<CustomField>
    <fullName>tipo_impuesto__c</fullName>
    <label>Tipo de impuesto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sujeto a impuestos</fullName>
            </value>
            <value>
                <fullName>Libre de impuesto</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>